hydroflow/tests/snapshots/surface_python__python_two_args@graphvis_dot.snap
---
source: hydroflow/tests/surface_python.rs
expression: hf.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([(5, 1)])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) py_udf(r#\"\ldef add(a, b):\lreturn a + b\l        \"#, \"add\")\l", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n3v1 [label="(n3v1) map(|x: PyResult<Py<PyAny>>| Python::with_gil(|py| {\l    usize::extract(x.unwrap().as_ref(py)).unwrap()\l}))\l", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n4v1 [label="(n4v1) assert_eq([6])", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n1v1 -> n2v1
        n2v1 -> n3v1
        n3v1 -> n4v1
    }
}

